fixing layouts and spacing

--- a/styles/antd.scss
+++ b/styles/antd.scss
@@ -358,8 +358,8 @@ div.ant-table-wrapper {
   @apply flex flex-auto flex-col;
   .ant-spin-nested-loading,
   .ant-spin-container,
-  .ant-table,
-  .ant-table-container,
+  // .ant-table,
+  // .ant-table-container,
   .ant-table-content {
     @apply flex flex-col flex-auto;
   }
